Updated Team Controller Added Statistic Controller for future work Updated Docker file Added Forwarding to default route Updated Swagger documentation
